# physics-NNs-hard-constraints

./: .gitignore  README.md  pyproject.toml  requirements.txt  resume.py  server_train.py  test.py  train.py
configs/datasets/: diffusion-sorption.yaml  navier-stokes.yaml
configs/models/: fno2d-64-8m-hard-constraint-moe.yaml  fno2d-64-8m-hard-constraint.yaml  fno2d-64-8m.yaml  fno3d-64-8m-hard-constraint-moe.yaml  fno3d-64-8m-hard-constraint.yaml  fno3d-64-8m.yaml
configs/training/: ds.yaml  ns.yaml
neptune/: __init__.py  constants.py  parser.py  types.py
neptune/callbacks/: __init__.py  callback_utils.py  io.py  visualize.py
neptune/datasets/: __init__.py  data_maps.py  data_utils.py  dataloader.py  dataset_builder.py  diffusion_sorption.py  functions.py  navier_stokes.py
neptune/geometry/: __init__.py  function.py  grid.py  mask.py  mesh_utils.py  utils.py
neptune/losses/: __init__.py  mse.py  pde_loss.py
neptune/models/: __init__.py  fno2d.py  fno3d.py  model_aux.py  model_builder.py  model_utils.py  sequential.py
neptune/models/MoE/: __init__.py  moe_utils.py  spatial_temporal_router.py
neptune/models/constraints/: __init__.py  constraint_utils.py  hard_constraint.py
neptune/pdes/: __init__.py  abstract_pde.py  diffusion_sorption.py  finite_differences.py  navier_stokes_2d.py
neptune/trainers/: __init__.py  abstract_trainer.py  checkpointing.py  metrics.py  optimizers.py  train_utils.py  trainer.py
neptune/utils/: __init__.py  dataclasses.py  distributed.py  rng_manager.py  tf_utils.py  utils.py  visualization.py
(+5 files in other folders)
