[project]
name = "neptune"
version = "0.0.1"
authors = [{ name = "Nithin Chalapathi", email = "nithinc@berkeley.edu" }]
description = "Package for solving PDEs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["neptune"]
